--- a/examples/crud/crud-demo.yaml
+++ b/examples/crud/crud-demo.yaml
@@ -19,9 +19,10 @@ blocks:
             label: "CEO: Pikachu"
           - type: text
             content:
-              Pikachu is the CEO of ThunderCorp International, known for his energetic
-              leadership and iconic rise from pop culture mascot to business figure. With
-              a shockingly sharp strategy, he leads with agility, loyalty, and charm.
+              Pikachu is the CEO of ThunderCorp International, known for his
+              energetic leadership and iconic rise from pop culture mascot to
+              business figure. With a shockingly sharp strategy, he leads with
+              agility, loyalty, and charm.
           - type: dialog
             trigger:
               type: button
@@ -30,29 +31,31 @@ blocks:
               - type: text
                 content:
                   Under Pikachu's leadership, ThunderCorp has expanded into cutting-edge
-                  sectors including sustainable energy, gamified wellness platforms, and AI-driven
-                  entertainment. His approach blends instinctive decision-making with deep
-                  emotional intelligence, earning him a reputation as both a visionary and
-                  a team-first executive. Despite his small stature, Pikachu commands attention
-                  in boardrooms worldwide, often communicating through subtle gestures, electrifying
-                  presence, and the occasional “Pika” punctuated with purpose. A firm believer
-                  in evolution—both personal and organizational—he champions growth through
-                  adaptation, partnership, and a relentless commitment to staying one step
-                  ahead in an ever-changing landscape.
+                  sectors including sustainable energy, gamified wellness
+                  platforms, and AI-driven entertainment. His approach blends
+                  instinctive decision-making with deep emotional intelligence,
+                  earning him a reputation as both a visionary and a team-first
+                  executive. Despite his small stature, Pikachu commands
+                  attention in boardrooms worldwide, often communicating through
+                  subtle gestures, electrifying presence, and the occasional
+                  “Pika” punctuated with purpose. A firm believer in
+                  evolution—both personal and organizational—he champions growth
+                  through adaptation, partnership, and a relentless commitment
+                  to staying one step ahead in an ever-changing landscape.
   - type: query-provider
     queries:
       - id: persons
-        url: "/ns/demo/persons"
+        url: /ns/demo/persons
         queryParams: []
     blocks:
       - type: headline
         level: h1
-        label: "{{query.persons.total}} employees"
+        label: "{{query.persons.data.total}} employees"
       - type: table
         data:
           type: loop
           id: person
-          data: query.persons.data
+          data: query.persons.data.data
           pageSize: 10
         blocks:
           - type: table-actions
@@ -82,7 +85,7 @@ blocks:
               label: Seed Database
             mutation:
               method: POST
-              url: "/ns/demo/actions/seed-database"
+              url: /ns/demo/actions/seed-database
             blocks: []
       - type: column
         blocks:
@@ -92,5 +95,5 @@ blocks:
               label: Empty Persons Database
             mutation:
               method: DELETE
-              url: "/ns/demo/delete-all-persons"
+              url: /ns/demo/delete-all-persons
             blocks: []
