--- a/examples/crud/crud-demo.yaml
+++ b/examples/crud/crud-demo.yaml
@@ -68,7 +68,7 @@ blocks:
               - type: dialog
                 trigger:
                   type: button
-                  label: create new employee
+                  label: new employee
                 blocks:
                   - type: headline
                     level: h3
@@ -151,7 +151,7 @@ blocks:
               - type: dialog
                 trigger:
                   type: button
-                  label: create random entries
+                  label: import employees
                 blocks:
                   - type: headline
                     level: h3
@@ -194,7 +194,7 @@ blocks:
                   - type: form
                     trigger:
                       type: button
-                      label: empy database
+                      label: empty database
                     mutation:
                       method: POST
                       url: http://localhost:3333/actions
@@ -298,7 +298,7 @@ blocks:
                       url: http://localhost:3333/employees/{{loop.person.id}}
                     blocks:
                       - type: text
-                        content: Are you sure you want to this employee?
+                        content: Are you sure you want to delete this employee?
         columns:
           - type: table-column
             label: name
